Displaying preview label of icons underneath so it doesn't causes misalignments (fixes #134)

--- a/platforms/common/scss/admin/particles/_icons.scss
+++ b/platforms/common/scss/admin/particles/_icons.scss
@@ -23,10 +23,12 @@
 
     .g-icon-preview {
         padding: 0 2px;
+        text-align: center;
         @include transform(translateZ(0));
 
         span {
             color: lighten(#000, 70);
+            display: block;
         }
 
         i {
